bug: column stretching

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,7 +7,7 @@
 .grid-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: repeat(3, auto, auto);
+    grid-auto-rows: repeat(3, 250px, auto);
     grid-gap: 10px;
 }
 .grid-item{
@@ -17,7 +17,7 @@
     grid-column-start: 1;
     grid-column-end: -1;
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: 3;
 }
 .grid-item-2{
     grid-column-start: 1;
@@ -35,7 +35,7 @@
 .grid-item-4{
     grid-column-start: 1;
     grid-column-end: -1;
-    grid-row-start: 5;
-    grid-row-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
 
 }
